# arcadiasuite

./: .env.example  .gitignore  .replit  ARCADIA_AUDIT_EXECUCAO.md  CLAUDE.md  DOCUMENTATION.md  Dockerfile  Dockerfile.python  MAPA_GERAL_RETAIL.md  MAPA_PLUS_ARCADIA.md  MAPA_SISTEMA_ARCADIA.md  PLANO_EVOLUCAO_ARCADIA.md  README.md  RELATORIO_TECNICO_RETAIL.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  grafico_ativo_passivo.py  package.json  pyproject.toml  replit.md
client/: index.html
client/src/: App.tsx  index.css
db/: index.ts
docker/: init-pgvector.sql  litellm-config.yaml  python-entrypoint.sh
metabase/: metabase-data.trace.db  start-metabase.sh
migrations/: 0000_low_tiger_shark.sql  0001_whatsapp_auto_reply_config.sql  0002_tenant_isolation.sql
migrations/meta/: 0000_snapshot.json  _journal.json
python-service/: main.py  requirements.txt
python-service/scripts/: run_capture.py
python-service/services/: capture.py  cientista.py  embeddings.py  executor.py  rpa.py  workflow.py
scripts/: deploy.sh  generate-architecture-doc.ts  generate-docs.ts  github-backup-full.ts  github-sync-essential.ts  github-sync.ts  upload-backup.ts
server/: auth.ts  devAgent.ts  index.ts  logger.ts  routes.ts  storage.ts
server/admin/: routes.ts
server/api-central/: routes.ts
server/automations/: engine-proxy.ts  routes.ts  service.ts
server/autonomous/: routes.ts
server/bi/: engine-proxy.ts  routes.ts  staging.ts  upload.ts
server/blackboard/: BaseBlackboardAgent.ts  ContextIndexer.ts  PipelineOrchestrator.ts  (+3 more)
shared/: schema.ts
(+264 files in other folders)
