[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nfelib>=2.3.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pyopenssl>=25.3.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.21",
    "signxml>=4.2.0",
    "uvicorn>=0.40.0",
    "zeep>=4.3.2",
]
